--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.14.2"
+    "lodash": "4.15.0"
   },
   "devDependencies": {
-    "publish": "^0.6.0",
-    "winston": "^2.2.0"
+    "publish": "0.6.0",
+    "winston": "2.2.0"
   }
 }
